# openhl

./: Cargo.toml  README.md  rust-toolchain.toml
crates/clearing/src/: lib.rs
crates/clob/: Cargo.toml
crates/clob/src/: book.rs  types.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: bridge.rs  codec.rs  engine_app.rs  lib.rs  node.rs  runner.rs  signing_provider.rs
crates/consensus/src/types/: address.rs  height.rs  proposal.rs  proposal_part.rs  value.rs  vote.rs
crates/evm/: Cargo.toml
crates/evm/examples/: sign-transfer.rs
crates/evm/src/: engine.rs  in_memory.rs  lib.rs  live_node.rs  openhl_evm.rs  reth_node.rs
crates/evm/src/precompiles/: mod.rs
crates/funding/: Cargo.toml
crates/funding/src/: types.rs
crates/liquidation/: Cargo.toml
crates/liquidation/src/: compute.rs  lib.rs  types.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
crates/oracle/: Cargo.toml
crates/oracle/src/: compute.rs  lib.rs  state.rs  types.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/vault/: Cargo.toml
crates/vault/src/: state.rs
docs/: architecture.md  testing.md
examples/: chain-history-default.json  eth-sendrawtx-demo.sh  seed-default.json
